[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/PlayArea/GUI/GameHUD.gd" type="Script" id=1]
[ext_resource path="res://Square.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/PlayArea/GUI/health_star.png" type="Texture" id=3]
[ext_resource path="res://Scenes/PlayArea/GUI/health_bar.png" type="Texture" id=4]




[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.333191, 0.804688, 0.292824 )
border_width_left = 13
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 0.696157 )
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_detail = 10
expand_margin_left = 155.0
expand_margin_right = 19.0

[sub_resource type="DynamicFont" id=3]
size = 34
extra_spacing_char = 1
font_data = ExtResource( 2 )

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1
light_mode = 1

[node name="GameHUD" type="VBoxContainer"]
material = SubResource( 1 )
use_parent_material = true
margin_left = 4.0
margin_right = 1276.0
margin_bottom = 720.0
alignment = 1
script = ExtResource( 1 )

[node name="UpperHUD" type="HBoxContainer" parent="."]
use_parent_material = true
margin_right = 1272.0
margin_bottom = 90.0
size_flags_vertical = 2

[node name="Score_meter" type="Panel" parent="UpperHUD"]
use_parent_material = true
margin_right = 151.95
margin_bottom = 90.0
rect_min_size = Vector2( 151.95, 90 )
size_flags_horizontal = 0
custom_styles/panel = SubResource( 2 )

[node name="Score_label" type="Label" parent="UpperHUD/Score_meter"]
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "score: 0"
valign = 1

[node name="LowerHUD" type="HSplitContainer" parent="."]
use_parent_material = true
margin_top = 592.0
margin_right = 1272.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
split_offset = 578
dragger_visibility = 1

[node name="HealthMeter" type="Panel" parent="LowerHUD"]
use_parent_material = true
margin_right = 578.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 118.78 )
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="Health_icon" type="TextureRect" parent="LowerHUD/HealthMeter"]
material = SubResource( 4 )
anchor_bottom = 1.0
margin_left = -4.0
margin_right = 115.0
margin_bottom = 0.220001
rect_rotation = -1080.0
rect_scale = Vector2( 0.9, 0.9 )
rect_pivot_offset = Vector2( 60, 64 )
texture = ExtResource( 3 )
stretch_mode = 6

[node name="Health_bar" type="TextureProgress" parent="LowerHUD/HealthMeter"]
use_parent_material = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -458.055
margin_top = -114.464
margin_right = 2.94531
margin_bottom = -12.4641
size_flags_vertical = 4
step = 0.0
value = 100.0
texture_progress = ExtResource( 4 )

[node name="PowerMeters" type="HBoxContainer" parent="LowerHUD"]
margin_left = 602.0
margin_right = 1272.0
margin_bottom = 128.0
alignment = 2

[node name="Tween" type="Tween" parent="."]

